force-app/main/default/objects/ASPIRAX__Relation__c.object
<CustomObject>
    <fields>
        <fullName>ASPIRAX__Dispatcher__c</fullName>
        <description>Object that &quot;dispatches&quot; events, so appropriate &quot;listener&quot; object could be updated.</description>
        <label>Dispatcher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASPIRAX__Listener__c</fullName>
        <description>Object that gets updated whenever &quot;dispatcher&quot; object has been changed</description>
        <label>Listener</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASPIRAX__Lookup_Field__c</fullName>
        <description>Field that is determines relation between &quot;listener&quot; and &quot;dispatcher&quot;</description>
        <label>Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASPIRAX__Lookup_Type__c</fullName>
        <label>Lookup Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incoming</fullName>
                    <default>true</default>
                    <label>Incoming</label>
                </value>
                <value>
                    <fullName>Outgoing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASPIRAX__Trigger_ID__c</fullName>
        <label>Trigger ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASPIRAX__Trigger_Name__c</fullName>
        <label>Trigger Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Relation</label>
    <listViews>
        <fullName>ASPIRAX__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>